sync workflows and Docker configs of v1.1
